--- a/index.html
+++ b/index.html
@@ -3,55 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="styles/css" href="./styles.css">
+    <title>Watch Repair At It's Best</title>
+    <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
-    <div class="parent">
-        <header class="first-son">
-            <div class="first-grand">
-                 <img class="descendant1" style="width: 80px; height: 50px;" src="./images/logo.jpg" alt="Agriculture">
-                 <a href="#">Categories</a>
-                 <a href="#">Services</a>
-                 <a href="#">Menu</a>
+    <div class="container">
+        <nav class="header">
+            <div class="logo"><img src="./images/logo.jpg" alt=""></div>
+            <div class="links">
+                <a href="#">Watch Repair</a>
+                <a href="#">contact Us</a>
+                <a href="#">New Deals</a>
             </div>
-            <div class="second-grand">
-                <div>
-                    <h1>This website will be awesome!</h1>
-                    <p>This website has some subtext that goes under the main title. It is a smaller font and the color is lower contrast.</p>
-                    <button class="button">Sign up</button>
-                </div>
-                <div><img src="./images/images.jpeg" alt="Love Agriculture"></div>
+        </nav>
+        <div class="info">
+            <div>
+                <h1>The number stop shop</h1>
+                <p>Your Timepieces will be up and running when you visit us today! We have new deals.</p>
+                <button type="submit" class="bs">Sign UP</button>
             </div>
-        </header>
-
-        <div>
-            <h2>Some random information</h2>
-            <figure class="goodness">
-                <div style="width: 100px; height: 60px; border: 1px solid red;" src="" alt=""></div>
-                <figcaption>Bread crumbs used for fillings</figcaption>
-            </figure>
+            <div class="info-image">
+                <img src="./images/watch-parts-.jpg" alt="">
+            </div>    
         </div>
 
-        <div>
-            <figure>
-                <blockquote>
-                    <p>This is an inspiring quote or testimonal from a customer. Maybe it's just filling up space or maybe people will read it. Who knows, all I know is it looks nice.</p>
-                </blockquote>
-                <figcaption>—Thor, <cite>god of Thunder</cite></figcaption>
-            </figure>
-        </div>
-
-        <div>
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button over there.</p>
-            <button class="button">Sign Up</button>
-        </div>
-
-        <div class="footer">
-            <p>Copyright &copy; The Odin Project</p>
-        </div>
     </div>
-    
 </body>
 </html>
