--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <nav class="header">
-            <div class="logo"><img src="./images/logo.jpg" alt=""></div>
+            <div class="logo"><img src="./images/clock-repair.jpg" alt=""></div>
             <div class="links">
                 <a href="#">Watch Repair</a>
                 <a href="#">contact Us</a>
@@ -17,16 +17,45 @@
             </div>
         </nav>
         <div class="info">
-            <div>
+            <div class="info-kid">
                 <h1>The number stop shop</h1>
                 <p>Your Timepieces will be up and running when you visit us today! We have new deals.</p>
                 <button type="submit" class="bs">Sign UP</button>
             </div>
             <div class="info-image">
-                <img src="./images/watch-parts-.jpg" alt="">
+                <img src="./images/cover-watch-repair.jpg" alt="">
             </div>    
         </div>
 
+    </div>
+    <div class="section">
+        <div>
+            <h2>Some Peeks from our Gallery</h2>
+        </div>
+        <div class="second-sec">
+        
+            <div class="images">
+                <img class="dimension" src="./images/watch-parts-.jpg" alt="">
+                <p>Watch parts to guide your description</p>
+            </div>
+
+            <div class="images">
+                <img class="dimension" src="./images/auto-movt.jpg" alt="watch movement">
+                <p>Watch automatic movement repairs</p>
+            </div>
+            <div class="images">
+                <img class="dimension" src="./images/clean-up.jpeg" alt="Image of stripped watch">
+                <p>Clean up your rusty and dirty watches</p>
+            </div>
+            <div class="images">
+                <img class="dimension" src="./images/battery.jpeg" alt="Battery being removed">
+                <p>Genuine Battery replacement</p>
+            </div>
+            <div class="images">
+                <img class="dimension" src="./images/clock-repair.jpg" alt="clock repair">
+                <p>Repair your clocks</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
