Things keep improving

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <div class="container">
         <nav class="header">
             <div class="logo"><img src="./images/clock-repair.jpg" alt=""></div>
-            <div class="links">
-                <a href="#">Watch Repair</a>
-                <a href="#">contact Us</a>
-                <a href="#">New Deals</a>
-            </div>
+            
+            <div><a href="#">Watch Repair</a></div>
+            <div><a href="#">contact Us</a></div>
+            <div><a href="#">New Deals</a></div>
+            
         </nav>
         <div class="info">
             <div class="info-kid">
                 <h1>The number stop shop</h1>
                 <p>Your Timepieces will be up and running when you visit us today! We have new deals.</p>
-                <button type="submit" class="bs">Sign UP</button>
+                <button type="submit" class="bs">Call Now</button>
             </div>
             <div class="info-image">
                 <img src="./images/cover-watch-repair.jpg" alt="">
@@ -55,6 +55,30 @@
                 <img class="dimension" src="./images/clock-repair.jpg" alt="clock repair">
                 <p>Repair your clocks</p>
             </div>
+        </div>
+
+        <div class="quote">
+            <div class="quote-text">
+                <i> Time is of essence and working with accurate time on your wrist and at home or office, puts you ahead.</i>
+            </div>
+            <div class="cite">
+               <b>-Timepieces Place, Having Accurate Time</b>
+            </div>
+
+
+        </div>
+        <div class="action">
+            <div class="move bs">
+                <div>
+                    <h4>Save your Precious Now!</h4>
+                    <P>Speak to us today and we'll give you the best repair services available</P>
+                </div>
+                <Button class="bs">Call Now</Button>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Copyright &copy; Timepieces Place 2023</p>
+
         </div>
     </div>
 </body>
